--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,12 @@
     <string name="app_name">LppTransit</string>
     <string name="title_activity_maps">Map</string>
     <string name="test">test</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="nearby_stations">Nearby Stations</string>
+    <string name="routes">Routes</string>
+    <string name="title_activity_main">Map</string>
+    <string name="parking">Parking</string>
+    <string name="todo">TODO</string>
 </resources>
