performance test commit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="title_activity_main">Map</string>
     <string name="parking">Parking</string>
     <string name="todo">TODO</string>
+    <string name="into_center">CENTER</string>
 </resources>
