--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,10 @@
     <string name="title_activity_main">Map</string>
     <string name="parking">Parking</string>
     <string name="todo">TODO</string>
-    <string name="into_center">CENTER</string>
+    <string name="into_center">PROTI AP</string>
+
+    <string name="arrival">prihod</string>
+    <string name="live">v živo</string>
+    <string name="detour">obvoz</string>
+
 </resources>
