map with bottom_sheet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="title_activity_main">Map</string>
     <string name="parking">Parking</string>
     <string name="todo">TODO</string>
-    <string name="into_center">PROTI AP</string>
+    <string name="into_center">V CENTER</string>
     <string name="sign_in_with_fb">Sign in with Facebook</string>
     <string name="sign_in_with_google">Sign in with Google</string>
     <string name="need_help">Need help?</string>
