--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,14 @@
 <resources>
-    <string name="app_name">LppTransit</string>
-    <string name="title_activity_maps">Map</string>
-    <string name="test">test</string>
+    <string name="app_name">Travana</string>
+    <string name="title_activity_maps" translatable="false">Map</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="nearby_stations">Nearby Stations</string>
     <string name="routes">Routes</string>
-    <string name="title_activity_main">Map</string>
+    <string name="title_activity_main" translatable="false">Map</string>
     <string name="parking">Parking</string>
-    <string name="todo">TODO</string>
-    <string name="into_center">V CENTER</string>
+    <string name="todo" translatable="false">TODO</string>
+    <string name="into_center">IN CENTER</string>
     <string name="sign_in_with_fb">Sign in with Facebook</string>
     <string name="sign_in_with_google">Sign in with Google</string>
     <string name="need_help">Need help?</string>
@@ -18,17 +16,18 @@
     <string name="transport">Transport,</string>
     <string name="the_way_it_was">the way it was</string>
     <string name="meant_to_be">meant to be.</string>
-    <string name="developer_help_contact">domenkralj.sahist@gmail.com</string>
+    <string name="developer_help_contact" translatable="false">domenkralj.sahist@gmail.com</string>
     <string name="arrival">prihod</string>
-    <string name="live">v živo</string>
-    <string name="detour">obvoz</string>
+    <string name="detour">detour</string>
+    <string name="by_developers">By Domen Kralj, Žiga Leskovec</string>
+    <string name="app_slogan_welcome_activity">better public transport.</string>
 
     <string name="you_are_already_logined">You are already logged in.</string>
     <string name="you_canceled_the_proccess">You canceled the process.</string>
     <string name="something_went_wrong_try_again">Something went wrong, please try again or contact us.</string>
     <string name="you_have_successfuly_logged_in">You have successfuly logged in.</string>
-    <string name="facebook_app_id">954691711564227</string>
-    <string name="fb_login_protocol_scheme">fb954691711564227</string>
+    <string name="facebook_app_id" translatable="false">954691711564227</string>
+    <string name="fb_login_protocol_scheme" translatable="false">fb954691711564227</string>
 
 
 </resources>
