Added clickable live arrival.

--- a/app/src/main/res/values-en-rGB/strings.xml
+++ b/app/src/main/res/values-en-rGB/strings.xml
@@ -5,7 +5,7 @@
     <string name="arrival">arrival</string>
     <string name="by_developers">By Domen Kralj, Žiga Leskovec</string>
     <string name="detour">detour</string>
-    <string name="into_center">IN CENTER</string>
+    <string name="into_center">CENTER</string>
     <string name="contact_us">" Contact us."</string>
     <string name="meant_to_be">meant to be.</string>
     <string name="need_help">Need help?</string>
