--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="title_activity_main" translatable="false">Map</string>
     <string name="parking">Parking</string>
     <string name="todo" translatable="false">TODO</string>
-    <string name="into_center">IN CENTER</string>
+    <string name="into_center">CENTER</string>
     <string name="sign_in_with_fb">Sign in with Facebook</string>
     <string name="sign_in_with_google">Sign in with Google</string>
     <string name="need_help">Need help?</string>
