Final location fix.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="the_way_it_was">the way it was</string>
     <string name="meant_to_be">meant to be.</string>
     <string name="developer_help_contact" translatable="false">domenkralj.sahist@gmail.com</string>
-    <string name="arrival">prihod</string>
+    <string name="arrival">arrival</string>
     <string name="detour">detour</string>
     <string name="by_developers">By Domen Kralj, Žiga Leskovec</string>
     <string name="app_slogan_welcome_activity">better public transport.</string>
