--- a/app/src/main/res/values-sl/strings.xml
+++ b/app/src/main/res/values-sl/strings.xml
@@ -39,4 +39,8 @@
     <string name="no_arrival_error">Ni bližnjih prihodov.</string>
     <string name="no_departures">Za danes ni napovedanih prihodov.</string>
     <string name="loading_buses">Nalaganje avtobusov</string>
+    <string name="following">sledenje</string>
+    <string name="all">vse</string>
+    <string name="posted_time">objavljeno • %1$dh</string>
+    <string name="post_comments">%1$d • komentarjev</string>
 </resources>
