--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,11 @@
     <string name="no_arrival_error">No upcoming arrivals.</string>
     <string name="no_departures">No scheduled arrivals for today.</string>
     <string name="loading_buses">Loading buses</string>
+    <string name="forum" translatable="false">Forum</string>
+    <string name="following">following</string>
+    <string name="all">all</string>
+    <string name="posted_time">posted • %1$dh</string>
+    <string name="post_comments">%1$d • comments</string>
 
 
 </resources>
