--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,5 @@
     <string name="unknown_error">Something went wrong. Please contact developers.</string>
     <string name="refresh">Refresh</string>
     <string name="create_a_new_post">Create a new post</string>
+    <string name="too_many_tags_error">You have reached tag count limit.</string>
 </resources>
