--- a/app/src/main/res/values-sl/strings.xml
+++ b/app/src/main/res/values-sl/strings.xml
@@ -51,4 +51,5 @@
     <string name="refresh">Osveži</string>
     <string name="create_a_new_post">Create a new post</string>
     <string name="too_many_tags_error">Dosegli ste mejo števila oznak.</string>
+    <string name="select_route">Izberite linijo</string>
 </resources>
