--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,5 @@
     <string name="refresh">Refresh</string>
     <string name="create_a_new_post">Create a new post</string>
     <string name="too_many_tags_error">You have reached tag count limit.</string>
+    <string name="select_route">Select a route</string>
 </resources>
