--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,8 @@
     <string name="detour">detour</string>
     <string name="by_developers">Avtorja Domen Kralj, Žiga Leskovec</string>
     <string name="app_slogan_welcome_activity">better public transport.</string>
+    <string name="officially">Officially</string>
+    <string name="approved_by">approved by</string>
 
     <string name="you_are_already_logined">You are already logged in.</string>
     <string name="you_canceled_the_proccess">You canceled the process.</string>
