--- a/app/src/main/res/values-sl/strings.xml
+++ b/app/src/main/res/values-sl/strings.xml
@@ -41,7 +41,7 @@
     <string name="loading_buses">Nalaganje avtobusov</string>
     <string name="following">sledenje</string>
     <string name="all">vse</string>
-    <string name="posted_time">objavljeno • %1$dh</string>
+    <string name="posted_time">objavljeno • %1$s</string>
     <string name="post_comments">%1$d • komentarjev</string>
     <string name="loading">nalaganje</string>
     <string name="opposite_error">Nasprotna postaja ne obstaja.</string>
