--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,7 +50,7 @@
     <string name="forum" translatable="false">Forum</string>
     <string name="following">following</string>
     <string name="all">all</string>
-    <string name="posted_time">posted • %1$dh</string>
+    <string name="posted_time">posted • %1$s</string>
     <string name="post_comments">%1$d • comments</string>
     <string name="loading">loading</string>
     <string name="opposite_error">Opposite station does not exist.</string>
