--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,8 @@
     <string name="officially">Officially</string>
     <string name="approved_by">approved by</string>
 
+    <string name="test_text" translatable="false">Zaradi popolne prometne zapore na javni poti JP 752181 (Sp. Pirniče 38 - 44), ima linija 15 od srede, 23. 10. 2019 od izvoza do zaključka gradbenih del »OBVOZ«.\n\nZačasno je ukinjeno postajališče »Zavrh« v obe smeri.</string>
+
     <string name="you_are_already_logined">You are already logged in.</string>
     <string name="you_canceled_the_proccess">You canceled the process.</string>
     <string name="something_went_wrong_try_again">Something went wrong, please try again or contact us.</string>
