--- a/app/src/main/res/values-sl/strings.xml
+++ b/app/src/main/res/values-sl/strings.xml
@@ -40,6 +40,7 @@
     <string name="no_departures">Za danes ni napovedanih prihodov.</string>
     <string name="loading_buses">Nalaganje avtobusov</string>
     <string name="following">sledenje</string>
+    <string name="follow">sledi</string>
     <string name="all">vse</string>
     <string name="posted_time">objavljeno • %1$s</string>
     <string name="post_comments">%1$d • komentarjev</string>
@@ -54,4 +55,7 @@
     <string name="select_route">Izberite linijo</string>
     <string name="officially">Uradno</string>
     <string name="approved_by">potrjeno od</string>
+
+
+
 </resources>
