--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,4 +64,7 @@
     <string name="create_a_new_post">Create a new post</string>
     <string name="too_many_tags_error">You have reached tag count limit.</string>
     <string name="select_route">Select a route</string>
+    <string name="attachments">Attachments</string>
+    <string name="connection_refused">Connection refused.</string>
+
 </resources>
