--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,5 +84,10 @@
     <string name="alert_cancel_button">Cancel</string>
     <string name="alert_ok_button">Ok</string>
 
+    <string name="privacy_policy_content">
+        <![CDATA[
+        <p>By logging in you agree with <a href="https://travana.si/pogoji_uporabe">Terms of service</a> and <a href="https://travana.si/politika_zasebnosti">Privacy Policy</a></p>
+        ]]>
+        </string>
 
 </resources>
