Added new Lpp exception handling

--- a/app/src/main/res/values-sl/strings.xml
+++ b/app/src/main/res/values-sl/strings.xml
@@ -77,8 +77,9 @@
 
     <string name="privacy_policy_content">
         <![CDATA[
-        <p>Z prijavo se strinjate z<a href="https://travana.si/pogoji_uporabe">Pogoji uporabe</a> in <a href="https://travana.si/politika_zasebnosti">Politiko Zasebnosti</a></p>
+        <p>Z prijavo se strinjate z<a href="https://travana.si/pogoji_uporabe">Pogoji uporabe</a> in <a href="https://travana.si/politika_zasebnosti">Politiko Zasebnosti</a>.</p>
         ]]>
         </string>
+    <string name="departures">VOZNI RED</string>
 
 </resources>
