--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,7 +33,7 @@
     <string name="unknown_error">Something went wrong. Please try again. - %1$d</string>
     <string name="refresh">Refresh</string>
     <string name="connection_refused">Connection refused.</string>
-    <string name="departures">TIMETABLE</string>
+    <string name="departures">Today\'s timetable</string>
     <string name="lpp_main_name" translatable="false">Ljubljanski potniški promet</string>
     <string name="lpp" translatable="false">LPP</string>
     <string name="detours">Detours</string>
