--- a/app/src/main/res/values-sl/strings.xml
+++ b/app/src/main/res/values-sl/strings.xml
@@ -34,7 +34,7 @@
     <string name="refresh">Osveži</string>
     <string name="officially">V sodelovanju z</string>
     <string name="connection_refused">Povezava zavrnjena.</string>
-    <string name="departures">Današnji vozni red</string>
+    <string name="departures">Vozni red %s</string>
     <string name="detours">Obvozi</string>
     <string name="data_is_from">Podatki o obvozih so pridobljeni iz <b>www.lpp.si/obvozi</b>.</string>
     <string name="click_for_more">Klikni za več.</string>
